@@ -95,8 +95,8 @@
         <property name="title">
          <string>&amp;Help</string>
         </property>
-		<addaction name="helpConfigureAction"/>
-		<addaction name="separator"/>
+        <addaction name="helpConfigureAction"/>
+        <addaction name="separator"/>
         <addaction name="helpAboutAction"/>
         <addaction name="helpAboutQtAction"/>
        </widget>
@@ -320,7 +320,20 @@
          </layout>
         </widget>
        </item>
-       <item row="1" column="0" rowspan="2" colspan="5">
+       <item row="1" column="0" colspan="12">
+        <spacer>
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint">
+          <size>
+           <width>8</width>
+           <height>0</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="2" column="0" rowspan="2" colspan="5">
         <widget class="QGroupBox" name="Dcf1GroupBox">
          <property name="title">
           <string>DCF1</string>
@@ -441,7 +454,7 @@
          </layout>
         </widget>
        </item>
-       <item row="1" column="5" rowspan="2" colspan="8">
+       <item row="2" column="5" rowspan="2" colspan="8">
         <widget class="QGroupBox" name="Lfo1GroupBox">
          <property name="title">
           <string>LFO1</string>
@@ -641,7 +654,7 @@
          </layout>
         </widget>
        </item>
-       <item row="3" column="0" colspan="5">
+       <item row="4" column="0" colspan="5">
         <widget class="QGroupBox" name="Dca1GroupBox">
          <property name="title">
           <string>DCA1</string>
@@ -707,7 +720,7 @@
          </layout>
         </widget>
        </item>
-       <item row="3" column="5" colspan="5">
+       <item row="4" column="5" colspan="5">
         <widget class="QGroupBox" name="Def1GroupBox">
          <property name="title">
           <string>DEF1</string>
@@ -776,7 +789,7 @@
          </layout>
         </widget>
        </item>
-       <item row="3" column="10" colspan="3">
+       <item row="4" column="10" colspan="3">
         <widget class="QGroupBox" name="Out1GroupBox">
          <property name="title">
           <string>OUT1</string>
@@ -827,19 +840,6 @@
           </item>
          </layout>
         </widget>
-       </item>
-       <item row="4" column="0" colspan="12">
-        <spacer>
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint">
-          <size>
-           <width>8</width>
-           <height>4</height>
-          </size>
-         </property>
-        </spacer>
        </item>
       </layout>
      </widget>
@@ -1053,7 +1053,20 @@
          </layout>
         </widget>
        </item>
-       <item row="1" column="0" rowspan="2" colspan="5">
+       <item row="1" column="0" colspan="12">
+        <spacer>
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint">
+          <size>
+           <width>8</width>
+           <height>0</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="2" column="0" rowspan="2" colspan="5">
         <widget class="QGroupBox" name="Dcf2GroupBox">
          <property name="title">
           <string>DCF2</string>
@@ -1174,7 +1187,7 @@
          </layout>
         </widget>
        </item>
-       <item row="1" column="5" rowspan="2" colspan="8">
+       <item row="2" column="5" rowspan="2" colspan="8">
         <widget class="QGroupBox" name="Lfo2GroupBox">
          <property name="title">
           <string>LFO2</string>
@@ -1374,7 +1387,7 @@
          </layout>
         </widget>
        </item>
-       <item row="3" column="0" colspan="5">
+       <item row="4" column="0" colspan="5">
         <widget class="QGroupBox" name="Dca2GroupBox">
          <property name="title">
           <string>DCA2</string>
@@ -1440,7 +1453,7 @@
          </layout>
         </widget>
        </item>
-       <item row="3" column="5" colspan="5">
+       <item row="4" column="5" colspan="5">
         <widget class="QGroupBox" name="Def2GroupBox">
          <property name="title">
           <string>DEF2</string>
@@ -1509,7 +1522,7 @@
          </layout>
         </widget>
        </item>
-       <item row="3" column="10" colspan="3">
+       <item row="4" column="10" colspan="3">
         <widget class="QGroupBox" name="Out2GroupBox">
          <property name="title">
           <string>OUT2</string>
@@ -1560,19 +1573,6 @@
           </item>
          </layout>
         </widget>
-       </item>
-       <item row="4" column="0" colspan="12">
-        <spacer>
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint">
-          <size>
-           <width>8</width>
-           <height>4</height>
-          </size>
-         </property>
-        </spacer>
        </item>
       </layout>
      </widget>
@@ -2012,13 +2012,13 @@
   </layout>
   <action name="helpConfigureAction" >
    <property name="text" >
-	<string>&amp;Configure...</string>
+    <string>&amp;Configure...</string>
    </property>
    <property name="iconText" >
-	<string>Configure</string>
+    <string>Configure</string>
    </property>
    <property name="statusTip" >
-	<string>Configure options</string>
+    <string>Configure options</string>
    </property>
   </action>
   <action name="helpAboutAction" >
