@@ -4,6 +4,12 @@ synthv1 - an old-school polyphonic synthesizer
 ChangeLog
 
 
+GIT HEAD
+
+- Main widget layout changed as much to expand or grow vertically
+  as needed.
+
+
 0.6.2  2015-04-30  A fifth official beta.
 
 - Custom knob/dial behavior mode options are now introduced:
